unpackaged/main/default/objects/Producer/Producer.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>