unpackaged/main/default/objects/Producer/fields/Producer_Address__c.field-meta.xml
<CustomField>
    <fullName>Producer_Address__c</fullName>
    <label>Producer Address</label>
    <type>Address</type>
</CustomField>