unpackaged/main/default/objects/Producer/fields/Producer_Email__c.field-meta.xml
<CustomField>
    <fullName>Producer_Email__c</fullName>
    <label>Producer Email</label>
    <type>Email</type>
</CustomField>