unpackaged/main/default/objects/Producer/fields/Producer_Website__c.field-meta.xml
<CustomField>
    <fullName>Producer_Website__c</fullName>
    <label>Producer Website</label>
    <type>Url</type>
</CustomField>